# Hashim

./: README.md  pyproject.toml
jax_ib/: Flapping_Demo.ipynb  __init__.py
jax_ib/MD/: CFD_MD_coupling.py  __init__.py  interaction_potential.py  simulate.py
jax_ib/base/: IBM_Force.py  __init__.py  advection.py  array_utils.py  boundaries.py  convolution_functions.py  diffusion.py  equations.py  finite_differences.py  grids.py  interpolation.py  kinematics.py  particle_class.py  particle_motion.py  pressure.py  time_stepping.py
jax_ib/notebooks/: Flapping_Demo.ipynb  Flapping_Demo_Main.ipynb  Flapping_Demo_Total.ipynb  flap.ipynb
jax_ib/penalty/: __init__.py  parameteric_fns.py  util_funs.py
